# winit_jr

./: .gitignore  Cargo.toml
sandbox/: Cargo.toml
sandbox/src/: main.rs
winit/: Cargo.toml
winit-core/: Cargo.toml
winit-core/src/: lib.rs
winit-core/src/cursor/: cursor_animation.rs  cursor_grab_mode.rs  cursor_image.rs  custom_cursor.rs  mod.rs
winit-core/src/dpi/: insets.rs  mod.rs  pixel.rs  position.rs  size.rs  unit.rs
winit-core/src/error/: bad_animation.rs  bad_icon.rs  bad_image.rs  event_loop_builder_error.rs  ime_request_error.rs  ime_surrounding_text_error.rs  mod.rs  not_supported_error.rs  os_error.rs  request_error.rs
winit-core/src/event/: device_event.rs  event_handler.rs  force.rs  mod.rs  mouse_button.rs  mouse_scroll_delta.rs  pointer.rs  source.rs  start_cause.rs  window_event.rs
winit-core/src/icon/: mod.rs
winit-core/src/id/: device_id.rs  finger_id.rs  mod.rs
winit-core/src/ime/: ime_capabilities.rs  ime_enable_request.rs  ime_hint.rs  ime_purpose.rs  ime_request.rs  ime_request_data.rs  ime_surrounding_text.rs  mod.rs
winit-core/src/keyboard/: element_state.rs  key_event.rs  mod.rs  modifiers.rs  native.rs
winit-core/src/modifiers/: mod.rs  modifiers_key_state.rs  modifiers_keys.rs  modifiers_state.rs
winit-core/src/monitor/: fullscreen.rs  mod.rs  monitor_handle.rs  video_mode.rs
winit-core/src/tablet/: mod.rs  tablet_tool_angle.rs  tablet_tool_button.rs  tablet_tool_data.rs  touch_phase.rs  (+2 more)
winit-macos/: Cargo.toml
winit-macos/src/: lib.rs
winit-win32/: Cargo.toml
winit-windows/: Cargo.toml
winit/src/: lib.rs
(+13 files in other folders)
