[workspace]
resolver = "3"
members = ["sandbox", "winit", "winit-core", "winit-macos", "winit-windows"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
winit = {path = "winit"}
winit-core = {path = "winit-core"}
winit-macos = {path = "winit-macos"}
winit-windows = {path = "winit-windows"}

raw_window_handle = {package = "raw-window-handle", version = "0.6.2", features = ["std"]}
